templates/compute/ec2/06-ec2-user-data-web.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Crea una instancia EC2 con Apache via UserData y HTTP publico.

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC donde se creara el grupo de seguridad.
  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet publica donde se lanzara la instancia EC2.
  InstanceType:
    Type: String
    Default: t3.micro
    AllowedValues:
      - t3.micro
      - t2.micro
    Description: Tipo de instancia EC2.
  AllowedHttpCidr:
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: '^([0-9]{1,3}\.){3}[0-9]{1,3}/([0-9]|[12][0-9]|3[0-2])$'
    ConstraintDescription: Ingresa un CIDR IPv4 valido, por ejemplo 0.0.0.0/0.
    Description: CIDR permitido para HTTP.
  AllowedSshCidr:
    Type: String
    Default: 203.0.113.10/32
    AllowedPattern: '^([0-9]{1,3}\.){3}[0-9]{1,3}/([0-9]|[12][0-9]|3[0-2])$'
    ConstraintDescription: Ingresa un CIDR IPv4 valido, por ejemplo 203.0.113.10/32.
    Description: CIDR permitido para SSH. Reemplaza el valor por tu IP publica /32 si necesitas acceso.
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
    Description: AMI de Amazon Linux obtenida desde Parameter Store.

Resources:
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Acceso HTTP publico y SSH restringido
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - CidrIp: !Ref AllowedHttpCidr
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: !Ref AllowedSshCidr
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-sg'

  MyEC2Instance:
    Type: AWS::EC2::Instance
    CreationPolicy:
      ResourceSignal:
        Timeout: PT5M
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
        - !Ref MySecurityGroup
      MetadataOptions:
        HttpEndpoint: enabled
        HttpTokens: required
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          set -eux
          trap '/opt/aws/bin/cfn-signal -e 1 --stack ${AWS::StackName} --resource MyEC2Instance --region ${AWS::Region}' ERR
          dnf update -y
          dnf install -y httpd
          systemctl enable --now httpd
          cat > /var/www/html/index.html <<'HTML'
          This EC2 instance is running successfully!
          HTML
          /opt/aws/bin/cfn-signal -e 0 --stack ${AWS::StackName} --resource MyEC2Instance --region ${AWS::Region}
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-web'

  MyEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-eip'

  MyEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt MyEIP.AllocationId
      InstanceId: !Ref MyEC2Instance

Outputs:
  InstanceID:
    Description: ID de la instancia EC2.
    Value: !Ref MyEC2Instance
    Export:
      Name: !Sub '${AWS::StackName}-InstanceId'
  ElasticIP:
    Description: Elastic IP asociada a la instancia.
    Value: !Ref MyEIP
    Export:
      Name: !Sub '${AWS::StackName}-ElasticIp'
  WebsiteURL:
    Description: URL del sitio web creado por UserData.
    Value: !Sub 'http://${MyEIP}'
    Export:
      Name: !Sub '${AWS::StackName}-WebsiteUrl'
